--- a/pages/Home.html
+++ b/pages/Home.html
@@ -300,11 +300,11 @@
             <h3 class="title">欢迎来到阿极的个人网站</h3>
             <h3 class="titles">今天也要记得开心鸭</h3>
             <div class='ribbon'>
-                <a href='https://zjsnulixuexi.github.io/zjsnuluxuexi.github.io/pages/Hobby.html'><span
+                <a href='./Hobby.html'><span
                         style="border-right: 2px #ccc solid;">爱好</span></a>
-                <a href='https://zjsnulixuexi.github.io/zjsnuluxuexi.github.io/pages/Introduce.html'><span
+                <a href='./Introduce.html'><span
                         style="border-right: 2px #ccc solid;">自述</span></a>
-                <a href='https://zjsnulixuexi.github.io/zjsnuluxuexi.github.io/pages/Works.html'><span>作品</span></a>
+                <a href='./Works.html'><span>作品</span></a>
 
             </div>
 
