--- a/pages/Introduce.html
+++ b/pages/Introduce.html
@@ -115,7 +115,7 @@
         <div class="right-side">
             <div id="profileContent" class="section-content">
                 <h2>张京生</h2>
-                <p><strong>年龄：</strong> 根据当前年份动态计算</p>
+                <p><strong>年龄：</strong> <span id="age">根据当前年份动态计算</span></p>
                 <p><strong>学校：</strong> 中国石油大学（北京）</p>
                 <p><strong>邮箱：</strong> 499342513@qq.com</p>
                 <p><strong>电话：</strong> 15984098235</p>
